# personal-notes-assistant

./: .editorconfig  .gitattributes  .gitignore  Caddyfile  README.md  docker-compose.yml  run.sh
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/api/middleware/: security.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  chat.py  health.py  notes.py  taxonomy.py
backend/app/api/v1/schemas/: auth.py  chat.py  note.py  note_search.py
backend/app/background/: __init__.py  embedding.py  enrichment.py
backend/app/core/models/: base.py  note.py
backend/app/core/repositories/: __init__.py  note_repository.py
backend/app/core/repositories/implementations/supabase/: note_repository.py
backend/app/core/schemas/: agent_note.py  auth.py  enrichment.py  note_search.py  taxonomy.py
backend/app/core/services/: agent_service.py  auth_service.py  embedding_service.py  enrichment_service.py  note_service.py  search_service.py  taxonomy_service.py
backend/app/db/: base.py
backend/app/utils/: logging.py  openai_client.py  validation.py
backend/docker/: start.sh
frontend/: app-config.js  index.html  styles.css  vercel.json
frontend/src/: config.js  main.js
frontend/src/app/: ui.js
supabase/: .gitignore  config.toml
supabase/migrations/: 20250821101009_00_enable_extensions.sql  20250821102010_01_create_notes.sql  20250821102520_02_add_indexes.sql  20250821103030_03_rls_policies.sql  20250821103840_04_rpcs_search.sql
(+10 files in other folders)
